# dazai-vulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
resources/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
resources/textures/: water.dds
src/: main.cpp
src/engine/: dds.h  defines.h  engine.cpp  engine.h  glfw_window.cpp  glfw_window.h  logger.h  renderer.cpp  renderer.h  resources.cpp  resources.h  shared_structs.h  timer.h  vk_types.h
src/simulation/: simulation.cpp  simulation.h
